hydroflow/tests/compile-fail/surface_singleton_nostate_undefined.stderr
error: Cannot find referenced name `unknown`; name was never assigned.
 --> tests/compile-fail/surface_singleton_nostate_undefined.rs:6:76
  |
6 |             -> filter(|value| value <= #my_ref.as_reveal_ref() && value <= #unknown.as_reveal_ref())
  |                                                                            ^^^^^^^^

error: Cannot reference operator `null`. Only operators with singleton state can be referenced.
 --> tests/compile-fail/surface_singleton_nostate_undefined.rs:6:40
  |
6 |             -> filter(|value| value <= #my_ref.as_reveal_ref() && value <= #unknown.as_reveal_ref())
  |                                        ^^^^^^^
